--- a/products/templates/product_detail.html
+++ b/products/templates/product_detail.html
@@ -20,13 +20,13 @@
                             <!-- Wrapper for carousel items -->
                             <div class="carousel-inner h-100">
                                 <div class="carousel-item active" >
-                                <img srcset="{{ MEDIA_URL }}{{ product.image1 }}" alt="First Slide" class="d-block img-fluid">
+                                <img src="{{ MEDIA_URL }}{{ product.image1 }}" alt="First Slide" class="d-block img-fluid">
                                 </div>
                                 <div class="carousel-item">
-                                <img srcset="{{ MEDIA_URL }}{{ product.image2 }}" alt="Second Slide" class="d-block img-fluid">
+                                <img src="{{ MEDIA_URL }}{{ product.image2 }}" alt="Second Slide" class="d-block img-fluid">
                                 </div>
                                 <div class="carousel-item">
-                                <img srcset="{{ MEDIA_URL }}{{ product.image3 }}" alt="Third Slide" class="d-block img-fluid">
+                                <img src="{{ MEDIA_URL }}{{ product.image3 }}" alt="Third Slide" class="d-block img-fluid">
                                 </div>
                             </div>
                             <!-- Carousel controls -->
@@ -44,7 +44,6 @@
                         <div class="product-desc"> {{ product.product_summary }} </div>
                         <hr>
                         <div class="product-price">€ {{ product.price }}</div>
-                        <!-- <div class="product-stock">In Stock</div> -->
                         <hr>
                         
                         <div class="btn-group cart">
@@ -87,7 +86,7 @@
         </div>
     </div>
 </div>
-</div>
+
 
  <script>
 $(document).ready(function(){
