--- a/templates/base.html
+++ b/templates/base.html
@@ -14,11 +14,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/cerulean/bootstrap.min.css">
     <!-- End Bootstrap CSS CDN -->
 
-    <!-- Start Local CSS -->
+    <!-- Start favicon  -->
+    <link rel="apple-touch-icon" sizes="180x180" href="https://cycleology.s3-eu-west-1.amazonaws.com/media/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://cycleology.s3-eu-west-1.amazonaws.com/media/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://cycleology.s3-eu-west-1.amazonaws.com/media/images/favicon-16x16.png">
+    <!-- End favicon  -->
 
+    <!-- Start Local CSS -->
     <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
-
     <!-- End Local CSS -->
 
     {% block head_js %} {% endblock head_js %}
@@ -54,7 +58,7 @@
                     <a class="nav-link text-white" href="{% url 'contact' %}">Contact</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Accessories</a>
+                    <a class="nav-link text-danger dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Accessories</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="{% url 'assessory_products' %}">All Accessories</a>
                         <div class="dropdown-divider"></div>
@@ -67,7 +71,7 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Components</a>
+                    <a class="nav-link text-danger  dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Components</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
                         <a class="dropdown-item" href="{% url 'components_products' %}">All Components</a>
                         <div class="dropdown-divider"></div>
@@ -78,7 +82,7 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Nutrition</a>
+                    <a class="nav-link text-danger dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Nutrition</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown3">
                         <a class="dropdown-item" href="{% url 'nutrition_products' %}">All Nutrition</a>
                         <div class="dropdown-divider"></div>
@@ -87,7 +91,7 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdown4" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Workshop</a>
+                    <a class="nav-link text-danger dropdown-toggle" href="#" id="navbarDropdown4" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Workshop</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown4">
                         <a class="dropdown-item" href="{% url 'workshop_products' %}">All Workshop</a>
                         <div class="dropdown-divider"></div>
@@ -95,9 +99,9 @@
                         <a class="dropdown-item" href="{% url 'tools_products' %}">Tools</a>
                     </div>
                 </li>
-                <li class="nav-item ">
-                    <a class="nav-link text-white" href="{% url 'clearance_products' %}">Clearance</a>
-                </li>
+                <!-- <li class="nav-item ">
+                    <a class="nav-link text-danger" href="{% url 'clearance_products' %}">Clearance</a>
+                </li> -->
                 <li class="">
                     <div class=" search-test">
                         <form class="form-inline" action="{% url 'search' %}" method="get">
@@ -163,14 +167,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         $(document).ready(function() {
             $('#sidebarCollapse').on('click', function() {
                 $('#sidebar').toggleClass('active');
                 $(this).toggleClass('active');
             });
         });
-    </script>
+    </script> -->
 </body>
 
 </html>
