--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -9,15 +9,15 @@
 
         <p>Welcome to CycleOlogy bike shop located in Celbridge, Co Kildare Ireland.</p>
 
-        <p>CycleOlogy are open 6 days a week from 9.30 am to 6.00pm Monday to Friday .We are open on Saturday from 9.30am to 5 pm and closed on Sunday. We are just 20 minutes drive from Dublin. </p>
+        <p>CycleOlogy are open 6 days a week from 9:30 am to 6:00 pm Monday to Friday .We are open on Saturday from 9:30 am to 5:00 pm and closed on Sunday. We are just 20 minutes drive from Dublin. </p>
 
         <p>Whether you need a commuter bike to get to work, a racing machine that can take you to victory, or a mountain bike to tackle all trails...We stock some of the best brands in the world, at competitive prices!</p>
 
-        <p>Our cliental vary from leisure to professional cyclists and we offer packages tailor made to suit your needs. We stock all the major cycling brands such as Lapierre, Look, Giant, Orbea bikes, Scott , Cipollini , Bianchi to mention a few . We stock kid’s bikes too in all sizes as well as balance bikes for the little cyclists. We do bike fitting on site.</p>
+        <p>Our clientele vary from leisure to professional cyclists and we offer packages tailor made to suit your needs. We stock all the major cycling brands such as Lapierre, Look, Giant, Orbea bikes, Scott , Cipollini , Bianchi to mention a few . We stock kid’s bikes too in all sizes as well as balance bikes for the little cyclists. We do bike fitting on site.</p>
 
         <p>CycleOlogy Bike to Work scheme is designed to help both employers and employees take advantage of the Governments cycle to work tax initiative. Check out some of our tailored Bike To Work Packages we work with both the Public and Private sector.</p>
 
-        <p>We offer first service free of charge on all new bikes purchased in store and repair all bicycles on stie. To book in your bike service please contact us directly at the shop.</p>
+        <p>We offer first service free of charge on all new bikes purchased in store and repair all bicycles on site. To book in your bike service please contact us directly at the shop.</p>
 
         <p>If you need anything or some information please do not hesitate to contact me directly,</p>
 
