--- a/templates/base.html
+++ b/templates/base.html
@@ -57,6 +57,9 @@
                 <li class="nav-item ">
                     <a class="nav-link text-white" href="{% url 'contact' %}">Contact</a>
                 </li>
+                                <li class="nav-item ">
+                    <a class="nav-link text-white" href="{% url 'products' %}">Shop</a>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Accessories</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -99,9 +102,6 @@
                         <a class="dropdown-item" href="{% url 'tools_products' %}">Tools</a>
                     </div>
                 </li>
-                <!-- <li class="nav-item ">
-                    <a class="nav-link text-danger" href="{% url 'clearance_products' %}">Clearance</a>
-                </li> -->
                 <li class="">
                     <div class=" search-test">
                         <form class="form-inline" action="{% url 'search' %}" method="get">
