--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -71,21 +71,21 @@ a, a:hover, a:focus {
 }
 
 
-#page-container {
+/* #page-container {
   position: relative;
   min-height: 100%;
 }
 
 #content-wrap {
-  padding-bottom: 3.4rem;    /* Footer height */
+  padding-bottom: 3.4rem;    
 }
 
 #footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 3.4rem;            /* Footer height */
-}
+  height: 3.4rem;            
+} */
 
 .footer-fix-bottom {
     margin-top: 40px;
@@ -99,6 +99,12 @@ a, a:hover, a:focus {
 
 }
 
+
+.special-color-dark {
+    background: #343a40;
+
+
+}
 /* footer {
 
 }
